WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177034
getData('text/plain') doesn't work on iOS 10
https://bugs.webkit.org/show_bug.cgi?id=177034
Summary
getData('text/plain') doesn't work on iOS 10
Ryosuke Niwa
Reported
2017-09-16 00:18:22 PDT
Apparently, getData('text/plain') got broken on iOS 10 with trunk WebKit.
Attachments
Fixes the bug on iOS 10
(4.27 KB, patch)
2017-09-16 00:22 PDT
,
Ryosuke Niwa
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2017-09-16 00:22:23 PDT
Created
attachment 321001
[details]
Fixes the bug on iOS 10
Wenson Hsieh
Comment 2
2017-09-16 00:47:28 PDT
Comment on
attachment 321001
[details]
Fixes the bug on iOS 10 View in context:
https://bugs.webkit.org/attachment.cgi?id=321001&action=review
> LayoutTests/ChangeLog:8 > + Removed the failing test expecotatins from tests that now pass on iOS.
s/expecotatins/expectations/
Ryosuke Niwa
Comment 3
2017-09-18 13:38:19 PDT
Committed
r222176
: <
http://trac.webkit.org/changeset/222176
>
Radar WebKit Bug Importer
Comment 4
2017-09-18 15:19:04 PDT
<
rdar://problem/34502924
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug