getData('text/plain') doesn't work on iOS 10 https://bugs.webkit.org/show_bug.cgi?id=177034

Reviewed by Wenson Hsieh.

Source/WebCore:

The bug was caused by the mispatch of UTI between reading & writing plain text.
Use kUTTypeText (instead of kUTTypePlainText) to read from UIPasteboard on iOS 10.

Re-enabled tests were passing on iOS 11 and continues to pass after this code change.

Tests: editing/pasteboard/clipboard-event.html
       editing/pasteboard/datatransfer-items-paste-plaintext.html
       editing/pasteboard/get-data-text-plain-paste.html

* platform/ios/PasteboardIOS.mm:
(WebCore::cocoaTypeFromHTMLClipboardType):

LayoutTests:

Removed the failing test expectations from tests that now pass on iOS.

* platform/ios/TestExpectations:


Canonical link: https://commits.webkit.org/193498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222176 268f45cc-cd09-0410-ab3c-d52691b4dbfc